--- a/requirements.txt
+++ b/requirements.txt
@@ -20,26 +20,4 @@ six==1.17.0
 tqdm==4.67.1
 tzdata==2025.1
 Werkzeug==3.1.3
-PS S:\MMRDA LOAN DATA REPORT> pip freeze
-blinker==1.9.0
-click==8.1.8
-colorama==0.4.6
-et_xmlfile==2.0.0
-Flask==3.1.0
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.5
-joblib==1.4.2
-MarkupSafe==3.0.2
-nltk==3.9.1
-numpy==2.2.2
-openpyxl==3.1.5
-packaging==24.2
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
-pytz==2025.1
-regex==2024.11.6
-six==1.17.0
-tqdm==4.67.1
-tzdata==2025.1
-Werkzeug==3.1.3
+pandas
